# calchart

./: .clang-format  .clang-tidy  .cvsignore  .gitignore  .gitmodules  .travis.yml  00_START_HERE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  FILES_CREATED.txt  GETTING_STARTED.md  LATEST_RELEASE_NOTES.md  Makefile  OPTIMIZATION_GUIDE_INDEX.md  PERFORMANCE_IMPROVEMENT_PLAN.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASES_1_2_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_ANALYSIS.md  PHASE_3A_FINDINGS.md  PHASE_3A_THREADING_FIX_GUIDE.md  PLAN_DELIVERY_SUMMARY.md  QUICK_REFERENCE.md  README-MACOSX.md  README-MACOSX.txt  README-UBUNTU.txt  README-WINDOWS.md  README-WINDOWS.txt  README-architecture.md  README-docs.txt  README.md  README.txt  README_PERFORMANCE_OPTIMIZATION.md  RELEASE_INSTRUCTIONS.md  RELEASE_INSTRUCTIONS.txt  RELEASE_NOTES.txt  VISUAL_WORKFLOW.md  (+388 more)
calchart_cmd/: CMakeLists.txt  calchart_cmd_parse.hpp  calchart_cmd_parse_continuity_text.hpp  main.cpp
core/: CMakeLists.txt  CalChartAngles.h  CalChartAnimation.cpp  CalChartAnimation.h  CalChartAnimationCommand.cpp  CalChartAnimationCommand.h  CalChartAnimationCompile.cpp  CalChartAnimationCompile.h  CalChartAnimationErrors.h  CalChartAnimationSheet.cpp  CalChartAnimationSheet.h  CalChartAnimationTypes.h  CalChartConfiguration.cpp  CalChartConfiguration.h  CalChartConstants.h  CalChartContinuity.h  CalChartContinuityToken.cpp  CalChartContinuityToken.h  CalChartCoord.h  CalChartDebugExport.cpp  CalChartDebugExport.hpp  CalChartDiagnosticInfo.cpp  CalChartDiagnosticInfo.hpp  CalChartDrawCommand.cpp  CalChartDrawCommand.h  CalChartFileFormat.h  CalChartGitHubIssueSubmitter.cpp  CalChartGitHubIssueSubmitter.hpp  CalChartImage.h  CalChartMeasure.h  CalChartMovePointsTool.cpp  CalChartPerformanceRegistry.cpp  CalChartPerformanceRegistry.h  CalChartPoint.cpp  CalChartPoint.h  CalChartPrintContinuityLayout.cpp  CalChartPrintShowToPS.cpp  CalChartShapes.cpp  CalChartShapes.h  CalChartSheet.cpp  (+17 more)
core/tests/: CMakeLists.txt  CalChartAnglesTests.cpp  CalChartAnimationSheetTests.cpp  CalChartContinuityTests.cpp  CalChartContinuityTokenTests.cpp  CalChartCoordTests.cpp  CalChartDiagnosticInfoTests.cpp  CalChartDrawCommandTests.cpp  CalChartDrawPrimativesTests.cpp  CalChartFileFormatTests.cpp  CalChartGitHubIssueSubmitterTests.cpp  CalChartMeasureTests.cpp  CalChartPerformanceRegistryTests.cpp  CalChartShapesTests.cpp  CalChartShowTests.cpp  CalChartTests.cpp  CalChartTextTests.cpp  CalChartUtilsTests.cpp  CircularLogBufferTests.cpp  PrintToPSTests.cpp
docs/: BugReporting.md  CMakeLists.txt  README.md  ViewerPanel_InjectShowData_Example.md  WINDOWS_CODE_SIGNING.md  WebViewIntegration.md  anim.tex  bugs.tex  charthlp.con  charthlp.hhc  charthlp.hhk  charthlp.hhp  charthlp.ref  charthlp.tex  charthlp_acknowledge.html  charthlp_animcont.html  charthlp_animwin.html  charthlp_basics.html  charthlp_blam.html  charthlp_bugs.html  charthlp_close.html  charthlp_comments.html  charthlp_contents.html  charthlp_copyright.html  charthlp_countermarch.html  charthlp_dir.html  charthlp_directions.html  charthlp_dirfrom.html  charthlp_dist.html  charthlp_distfrom.html  charthlp_dmcm.html  charthlp_dmhs.html  charthlp_drawpaths.html  charthlp_easyinstall.html  charthlp_editcont.html  charthlp_either.html  charthlp_even.html  charthlp_ewns.html  charthlp_fieldproperties.html  charthlp_fm.html  (+62 more)
docs/md/: Acknowledgments.md  AnimationCommands.md  CopyrightNotice.md  FutureOfCalChart.md  GuideToBugs.md  Installing.md  Introduction.md  License.md  Overview.md  Reference.md  index.md
docs/source/: gpl.tex  install.tex  overview.tex  refer.tex
src/: AnimationCanvas.cpp  AnimationCanvas.h  AnimationErrorsPanel.cpp  AnimationErrorsPanel.h  AnimationPanel.cpp  AnimationPanel.h  AnimationSprites.cpp  AnimationSprites.hpp  AnimationView.cpp  AnimationView.h  BackgroundImage.cpp  BackgroundImage.h  BackgroundImages.cpp  BackgroundImages.h  BeatMapDialog.cpp  BeatMapDialog.hpp  BugReportDialog.cpp  BugReportDialog.h  CCOmniviewCanvas.cpp  CCOmniviewCanvas.h  CMakeLists.txt  CalChartApp.cpp  CalChartApp.h  CalChartConfiguration.cpp  CalChartConfiguration.h  CalChartCoordHelper.h  CalChartDoc.cpp  CalChartDoc.h  CalChartDocCommand.cpp  CalChartDocCommand.h  CalChartDrawPrimativesHelper.h  CalChartDrawing.cpp  CalChartDrawing.h  CalChartDrawingGetMinSize.h  CalChartDrawingLayout.h  CalChartFrame.cpp  CalChartFrame.h  CalChartLogTarget.cpp  CalChartLogTarget.h  CalChartPreferences.cpp  (+276 more)
src/Core/: CalChartPoint.cpp  CalChartPoint.h
src/core/: BeatInfo.cpp  BeatInfo.h  CMakeLists.txt  CalChartAngles.h  CalChartAnimation.cpp  CalChartAnimation.h  CalChartAnimationCommand.cpp  CalChartAnimationCommand.h  CalChartAnimationCompile.cpp  CalChartAnimationCompile.h  CalChartAnimationErrors.h  CalChartAnimationSheet.cpp  CalChartAnimationSheet.h  CalChartAnimationTypes.h  CalChartConfiguration.cpp  CalChartConfiguration.h  CalChartConstants.h  CalChartContinuity.cpp  CalChartContinuity.h  CalChartContinuityToken.cpp  CalChartContinuityToken.h  CalChartCoord.cpp  CalChartCoord.h  CalChartCoroutine.h  CalChartDrawCommand.cpp  CalChartDrawCommand.h  CalChartDrawPrimatives.h  CalChartFileFormat.h  CalChartImage.cpp  CalChartImage.h  CalChartMovePointsTool.cpp  CalChartMovePointsTool.h  CalChartPoint.cpp  CalChartPoint.h  CalChartPostScript.h  CalChartPrintContinuityLayout.cpp  CalChartPrintContinuityLayout.h  CalChartPrintShowToPS.cpp  CalChartPrintShowToPS.hpp  CalChartRanges.h  (+93 more)
tests/: CMakeLists.txt  CalChartAnglesTests.cpp  CalChartAnimationCommandTests.cpp  CalChartAnimationSheetTests.cpp  CalChartContinuityTests.cpp  CalChartContinuityTokenTests.cpp  CalChartCoordTests.cpp  CalChartDrawCommandTests.cpp  CalChartFileFormatTests.cpp  CalChartPointTests.cpp  CalChartShapesTests.cpp  CalChartSheetTests.cpp  CalChartShowModeTests.cpp  CalChartShowTests.cpp  CalChartTests.cpp  CalChartTextTests.cpp  CalChartUtilsTests.cpp  DCSaveRestoreTests.cpp  PrintToPSTests.cpp  UpdateCheckerTests.cpp  sanity_tester.py
(+1665 files in other folders)
